--- a/ControleDeUsuarios/Views/Home/Privacy.cshtml
+++ b/ControleDeUsuarios/Views/Home/Privacy.cshtml
@@ -2,5 +2,10 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
+<h2>@ViewData["Message"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Professor @ViewData["Professor"]</p>
+
+<address>
+    <strong>More Information: </strong><a href="https://educandoweb.com.br">Educandoweb.com.br</a>
+</address>
